<resources>
    <string name="app_name">Elegance</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm Password:</string>
    <string name="submit">Submit</string>
    <string name="hintusername">Please enter username</string>
    <string name="hintpass">Please enter password</string>
    <string name="hintconfirm">Please confirm password</string>
    <string name="title_activity_login">Login</string>
    <string name="splashstring">Elegance</string>
    <string name="title_activity_appinfo">Appinfo</string>
    <string name="mainmenu">GO TO MAIN MENU ></string>
    <string name="logintext">Login with:</string>
    <string name="create">Create Account</string>
    <string name="email">Email:</string>
</resources>
