<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="elegance.example.ngondo.elegance.Login"
    android:orientation="vertical"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintext"
            android:layout_gravity="center"
            android:textSize="30dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/fb_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>


        <ImageButton
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/gplus_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/twitter_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_gravity="center"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/username"
                android:textSize="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="70"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/email"
                android:textSize="15dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_weight="70"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/password"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText3" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/confirm"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:background="@drawable/btnbelow"
            >
            <Button
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:text="@string/cancel"
                android:background="@android:color/transparent"
                android:id="@+id/gotomenu" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:text="@string/submit"
                android:background="@android:color/transparent"
                android:id="@+id/submit" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
